# mcp-debugger

./: .gitignore  .npmignore  LICENSE  QUESTIONS.md  README.md  main.py  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: test.yml
demo/: README.md  order_processor.py  test_orders.py
demo/.claude/: settings.local.json
demo_cpp/: demo.cpp
harness/: pyproject.toml
harness/src/harness/: __init__.py  cli.py  fixer.py  loader.py  repo_manager.py
src/: index.ts  test_dap.ts
src/dap/: session.ts  transport.ts  types.ts  wire.ts
src/mcp/: debuggerClearBreakpoints.ts  debuggerContinue.ts  debuggerEval.ts  debuggerLogs.ts  debuggerRun.ts  debuggerSetBreakpoints.ts  debuggerSources.ts  debuggerStatus.ts  debuggerStep.ts  debuggerStepIn.ts  debuggerStepOut.ts  debuggerTerminate.ts  debuggerWaitUntilBreakpoint.ts  server.ts
src/util/: debugpy.ts  lldb.ts  logger.ts  rustc.ts
tests/e2e/: cpp.test.ts  python.test.ts  rust.test.ts  swift.test.ts
tests/fixtures/cpp/: simple.cpp
tests/fixtures/python/: simple.py
tests/fixtures/rust/simple/src/: main.rs
tests/fixtures/swift/: simple.swift
tests/utils/: mcp-client.ts
